# app/models/core/tag/entity.rb
@@ -1,0 +1,3 @@
+Core::Tag::Entity = Data.define(:id, :user_id, :name, :color, :active) do
+  def active? = active
+end
