# app/models/tag/serializer.rb
@@ -1,0 +1,6 @@
+class Tag::Serializer
+  include JSONAPI::Serializer
+
+  set_type :tag
+  attributes :id, :name, :color, :active
+end
